--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/elemento-diagnostico/elemento-diagnostico.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/elemento-diagnostico/elemento-diagnostico.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutAlign="space-evenly center">
-	<div fxLayoutGap="10px">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+	<div class="diagnosis-text" fxLayoutGap="10px">
 		<mat-checkbox id="{{ diagnosis.snomed.pt }}" [checked]="diagnosis.isAdded" (change)="diagnosis.isAdded = $event.checked"></mat-checkbox>
 		<strong class="capitalize">{{ diagnosis.snomed.pt }}</strong>
 	</div>
