tg-6863 [FE] Modifica dialogo de confirmación

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/confirm-dialog/confirm-dialog.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/confirm-dialog/confirm-dialog.component.scss
@@ -1,3 +1,8 @@
+#warning-icon {
+	font-size: 70px;
+	padding: 20px;
+	display: block;
+} 
 
 .mat-dialog-content {
 	font-family: Roboto, "Helvetica Neue", sans-serif;
