--- a/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,9 +1,14 @@
-<h1 mat-dialog-title>{{ data.title | translate}}</h1>
-<div mat-dialog-content>
-	<div innerHTML="{{ data.content | translate}}"></div>
+<div fxLayout="column" fxLayoutGap="15px" fxLayoutAlign="start center">
+	<mat-icon [inline]="true" class="material-icons-outlined" id="warning-icon" color="primary" *ngIf="data.showMatIconError == true">
+		error_outline
+	</mat-icon>
+	<h1 mat-dialog-title>{{ data.title | translate}}</h1>
+	<div mat-dialog-content>
+		<div innerHTML="{{ data.content | translate}}"></div>
+	</div>
 </div>
 <div mat-dialog-actions align="end">
-	<button mat-button [mat-dialog-close]=false class="uppercase" id="cancel-button" name="cancel-button">
+	<button mat-button [mat-dialog-close]=false class="uppercase" id="cancel-button" name="cancel-button" mat-stroked-button [color]='okBottonColor'>
 		{{(data.cancelButtonLabel? data.cancelButtonLabel : 'buttons.CANCEL') | translate}}</button>
 	<button mat-raised-button [mat-dialog-close]=true cdkFocusInitial [color]='okBottonColor' class="uppercase"
 		id="okButton-button" name="okButton-button">
