tg-6784 [FE] Nuevo flujo de asignación de turno

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -209,7 +209,8 @@
 						</div>
 					</mat-card-content>
 				</mat-card>
-				<app-assigned-appointments [patientId]="patientId"></app-assigned-appointments>
+				<app-assigned-appointments [patientId]="patientId" (newAppointmentRequired)="newAppointment()">
+				</app-assigned-appointments>
 			</div>
 		</div>
 	</div>
