tg-6872 [FE] Responsive en selector semanal

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.html
@@ -4,7 +4,7 @@
 
 <ng-template #calendar>
 	<section class="turnos" id="calendar">
-		<div class="header" id="header" fxLayout="row" fxLayoutAlign="space-between center">
+		<div class="header" id="header" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayout.xs="column">
 			<mat-button-toggle-group>
 				<mat-button-toggle id="previous" class="navigation"
 								   mwlCalendarPreviousView
