tg-6892 [FE] Agregar la posibilidad de editar la fecha en el dialogo de otra indicación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/dialogs/other-indication/other-indication.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/dialogs/other-indication/other-indication.component.html
@@ -184,7 +184,8 @@
 			</div>
 
 		</div>
-
+		<app-datepicker [title]="'indicacion.internment-card.INDICATION_DATE'" [minDate]="this.data.entryDate"
+		[dateToSetInDatepicker]="this.data.actualDate" (selectDate)="setIndicationDate($event)"></app-datepicker>
 		<div actions id="button-confirm" fxLayoutAlign="end end">
 			<button mat-raised-button color="primary" id="confirm_button">
 				<span [translate]="'buttons.CONFIRM'"></span>
