tg-6891 [FE] Agregar condicion en formulario de nueva cobertura al paciente

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/personal-information/personal-information.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/personal-information/personal-information.component.html
@@ -69,6 +69,9 @@
 					<span>
 						{{ patientMC.medicalCoverage?.name}}
 					</span>
+					<span class="lowercase capitalize-first-letter">
+						{{getMedicalCoveragePlanText(patientMC)}}
+					</span>
 					<span fxLayout="row" fxLayoutGap="10px">
 						<span>{{ 'Nro afiliado/credencial:' }}</span>
 						<span *ngIf="patientMC.affiliateNumber; else noInformation">
