--- a/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/medical-coverage/medical-coverage.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/medical-coverage/medical-coverage.component.scss
@@ -4,6 +4,10 @@
 	margin: 0;
 }
 
+.mat-card{
+	max-width: 600px;
+}
+
 .form{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
