--- a/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/medical-coverage/medical-coverage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/medical-coverage/medical-coverage.component.html
@@ -14,6 +14,7 @@
 						<div fxLayout="column" fxLayoutAlign="space-between">
 							<span
 								class="medical-coverage-name">{{getFullHealthInsuranceText(patientMedicalCoverage.medicalCoverage)}}</span>
+							<span class="lowercase capitalize-first-letter">{{patientMedicalCoverage?.condition}}</span>
 							<app-editable-field [fieldName]="'Nro de afiliado'"
 												[value]="patientMedicalCoverage.affiliateNumber"
 												(newValueEmitted)="patientMedicalCoverage.affiliateNumber = $event">
@@ -32,6 +33,8 @@
 			<strong translate="medical-coverage.NEW_HEALTH_INSURANCES"></strong>
 			<form [formGroup]="healthInsuranceForm" fxLayoutGap="5px" class="form" #formDirectiveHealthInsuranceForm="ngForm"
 				  (ngSubmit)="addHealthInsurance(formDirectiveHealthInsuranceForm)">
+				<div fxLayout="column" fxLayoutGap="10px">
+					<div fxLayout="row" fxLayoutGap="10px" fxLayout.lt-sm="column">
 				<mat-form-field appearance="outline">
 					<input type="text" placeholder="{{ 'Buscar obra social' | translate }}" aria-label="Number"
 						   formControlName="healthInsurance" matInput [matAutocomplete]="auto">
@@ -44,13 +47,26 @@
 					</mat-autocomplete>
 					<mat-error translate="forms.REQUIRED"></mat-error>
 				</mat-form-field>
+
 				<mat-form-field appearance="outline">
 					<input id="healthInsuranceAffiliateNumber" name="healthInsuranceAffiliateNumber"
 						   formControlName="affiliateNumber" placeholder="{{'Nro de afiliado' | translate}}" matInput>
 				</mat-form-field>
-				<button mat-stroked-button color="primary" class="uppercase margin" id="add-health-insurance"
-						type="submit" name="add-health-insurance"
-						translate="medical-coverage.ADD_HEALTH_INSURANCES"></button>
+					</div>
+					<div fxLayout="row" fxLayoutGap="6px">
+						<mat-radio-group name="health-insurance-condition" id="health-insurance-condition" formControlName="condition" fxLayoutGap="20px">
+							<mat-radio-button id="voluntary" [value]="1">
+								<span translate="medical-coverage.VOLUNTARY"></span>
+							</mat-radio-button>
+							<mat-radio-button id="mandatory" [value]="2">
+								<span translate="medical-coverage.MANDATORY"></span>
+							</mat-radio-button>
+						</mat-radio-group>
+					</div>
+						<button mat-stroked-button color="primary" class="uppercase margin" id="add-health-insurance"
+								type="submit" name="add-health-insurance"
+								translate="medical-coverage.ADD_HEALTH_INSURANCES"></button>
+				</div>
 			</form>
 		</div>
 	</mat-card>
@@ -71,7 +87,9 @@
 
 						<div fxLayout="column">
 							<span
-								class="medical-coverage-name">{{getPrivateHealthInsuranceText(patientPrivateHealthInsurance)}}</span>
+								class="medical-coverage-name">{{patientPrivateHealthInsurance.medicalCoverage.name}}</span>
+							<span
+								class="lowercase capitalize-first-letter">{{getPrivateHealthInsurancePlanText(patientPrivateHealthInsurance)}}</span>
 							<app-editable-field [fieldName]="'Nro de credencial'"
 												[value]="patientPrivateHealthInsurance.affiliateNumber"
 												(newValueEmitted)="patientPrivateHealthInsurance.affiliateNumber = $event">
@@ -95,9 +113,9 @@
 
 		<div>
 			<strong translate="medical-coverage.NEW_PRIVATE_HEALTH_INSURANCES"></strong>
-			<form [formGroup]="prepagaForm" class="form" fxLayoutGap="5px" #formDirectivePrepagaForm='ngForm'
+			<form [formGroup]="prepagaForm" class="form" fxLayout="column" fxLayoutGap="5px" #formDirectivePrepagaForm='ngForm'
 				  (ngSubmit)="addPrivateHealthInsurance(formDirectivePrepagaForm)">
-				<div fxLayout="column">
+				<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="5px">
 					<mat-form-field appearance="outline">
 						<input type="text" placeholder="{{ 'Buscar prepaga' | translate }}" aria-label="Number"
 							   formControlName="name" matInput [matAutocomplete]="autoPrivate">
@@ -111,17 +129,54 @@
 						<mat-error translate="forms.REQUIRED"></mat-error>
 					</mat-form-field>
 					<mat-form-field appearance="outline">
-						<mat-label>Fecha de inicio</mat-label>
-						<input formControlName="startDate" id="start-date" matInput [matDatepicker]="picker2" [min]="minDate">
-						<mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-						<mat-datepicker #picker2></mat-datepicker>
+						<mat-label [translate]="'medical-coverage.PLAN_LABEL'"></mat-label>
+						<mat-select
+							formControlName="plan">
+							<mat-option
+								id="plan"
+								name="plan"
+								*ngFor="let privateHealthInsurancePlan of plans"
+								[value]="privateHealthInsurancePlan.id">
+								{{privateHealthInsurancePlan.plan}}
+							</mat-option>
+						</mat-select>
 					</mat-form-field>
 				</div>
-				<div fxLayout="column">
+				<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px">
 					<mat-form-field appearance="outline">
 						<mat-label [translate]="'medical-coverage.CUIT_LABEL'"></mat-label>
-						<input  id="prepagaCuit" name="prepagaCuit"
+						<input id="prepagaCuit" name="prepagaCuit"
 							   formControlName="cuit" placeholder="{{'CUIT' | translate}}" matInput>
+					</mat-form-field>
+					<mat-form-field appearance="outline">
+						<mat-label [translate]="'medical-coverage.AFFILIATE_NUMBER_LABEL'"></mat-label>
+						<input id="prepagaAffiliateNumber" name="prepagaAffiliateNumber"
+							   formControlName="affiliateNumber" placeholder="{{'Nro de afiliado' | translate}}"
+							   matInput>
+					</mat-form-field>
+				</div>
+				<div fxLayout="row" fxLayoutGap="10px">
+					<div fxLayout="row" fxLayoutGap="6px" fxLayoutAlign="start center">
+						<mat-radio-group name="private-healh-insurance-condition" id="private-healh-insurance-condition"
+										 formControlName="condition" fxLayoutGap="20px">
+							<mat-radio-button id="private-voluntary" [value]="1">
+								<span translate="medical-coverage.VOLUNTARY"></span>
+							</mat-radio-button>
+							<mat-radio-button id="private-mandatory" [value]="2">
+								<span translate="medical-coverage.MANDATORY"></span>
+							</mat-radio-button>
+						</mat-radio-group>
+					</div>
+				</div>
+
+				<div fxLayout="row"  fxLayout.lt-sm="column" fxLayoutGap="10px">
+
+					<mat-form-field appearance="outline">
+						<mat-label>Fecha de inicio</mat-label>
+						<input formControlName="startDate" id="start-date" matInput [matDatepicker]="picker2"
+							   [min]="minDate">
+						<mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+						<mat-datepicker #picker2></mat-datepicker>
 					</mat-form-field>
 					<mat-form-field appearance="outline">
 						<mat-label>Fecha de fin</mat-label>
@@ -133,31 +188,9 @@
 					</mat-form-field>
 				</div>
 				<div fxLayout="column">
-					<mat-form-field appearance="outline">
-						<mat-label [translate]="'medical-coverage.PLAN_LABEL'"></mat-label>
-						<mat-select
-							formControlName="plan">
-							<mat-option
-								id="plan"
-								name="plan"
-								*ngFor="let privateHealthInsurancePlan of plans" [value]="privateHealthInsurancePlan.id">
-								{{privateHealthInsurancePlan.plan}}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-					<div fxLayout="column">
-					<mat-form-field appearance="outline">
-						<mat-label [translate]="'medical-coverage.AFFILIATE_NUMBER_LABEL'"></mat-label>
-						<input id="prepagaAffiliateNumber" name="prepagaAffiliateNumber"
-							   formControlName="affiliateNumber" placeholder="{{'Nro de afiliado' | translate}}"
-							   matInput>
-					</mat-form-field>
-				</div>
-				<div fxLayout="column">
 					<button mat-stroked-button color="primary" class="uppercase margin" id="add-medical-coverage"
 							type="submit" name="add-medical-coverage"
-							translate="medical-coverage.ADD_PRIVATE_HEALTH_INSURANCES"> </button>
+							translate="medical-coverage.ADD_PRIVATE_HEALTH_INSURANCES"></button>
 				</div>
 
 			</form>
