tg-6751 [FE] Agrega el dialogo de Plan Parenteral

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
@@ -10,6 +10,11 @@
 			<button mat-menu-item (click)="openIndicationDialog()">
 				<span>{{'ambulatoria.dialog-title.OTHER-INDICATION' | translate }}</span>
 			</button>
+			<ng-container *appHasRole="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
+				<button mat-menu-item (click)="openParenteralPlanDialog()">
+					<span>{{'indicacion.internment-card.menu-items.PARENTERAL_PLAN' | translate }}</span>
+				</button>
+			</ng-container>
 		</mat-menu>
 		<div class="content" fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="10px">
 			<button mat-icon-button (click)="viewAnotherDay(-1)" [disabled]="this.currentViewIsEntryDate">
