--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
@@ -36,7 +36,7 @@
 		</div>
 		<div id="sections">
 			<app-internment-diet-card [diets]="diets"></app-internment-diet-card>
-			<app-internment-parenteral-plan-card></app-internment-parenteral-plan-card>
+			<app-internment-parenteral-plan-card [parenteralPlans]="parenteralPlan"></app-internment-parenteral-plan-card>
 			<app-internment-pharmaco-card></app-internment-pharmaco-card>
 			<app-internment-other-indication-card [otherIndications]="otherIndications"></app-internment-other-indication-card>
 		</div>
