--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-parenteral-plan-card/internment-parenteral-plan-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-parenteral-plan-card/internment-parenteral-plan-card.component.html
@@ -1,3 +1,3 @@
 <app-content width="full">
-	<app-indication [header]="PARENTERAL_PLAN" [contents]="[]" [noInformation]="'indicacion.internment-card.sections.no-data.PARENTERAL_PLAN'"></app-indication>
+	<app-indication [header]="PARENTERAL_PLAN" [contents]="indicationContent" [noInformation]="'indicacion.internment-card.sections.no-data.PARENTERAL_PLAN'"></app-indication>
 </app-content>
