tg-6965 [FE] Agregar condicion en detalle de turno

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -46,6 +46,9 @@
 						<span class="mat-body patient-info coverage-text" *ngIf="coverageNumber">/
 							{{coverageNumber}}
 						</span>
+						<span class="mat-body patient-info coverage-text lowercase" *ngIf="coverageCondition">/
+							{{coverageCondition}}
+						</span>
 					</div>
 				</div>
 				<div fxLayout="column" fxLayoutGap="5px">
