tg-6974 [FE] Mueve componente "InternmentEpisodeSummary" al modulo de internación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/internment-episode-summary/internment-episode-summary.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/internment-episode-summary/internment-episode-summary.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../assets/styles/variables";
+@import "../../../../../../../../../assets/styles/variables";
 
 .flex-container, .mat-line.flex-container {
 	display: flex;
