--- a/front-end/apps/projects/hospital/src/app/modules/portal-paciente/components/resumen-historia-clinica/resumen-historia-clinica.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/portal-paciente/components/resumen-historia-clinica/resumen-historia-clinica.component.html
@@ -27,7 +27,7 @@
 			</div>
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-					<app-antropometricos-summary [anthropometricData$]="anthropometricData$">
+					<app-antropometricos-summary [anthropometricDataList$]="anthropometricDataList$">
 					</app-antropometricos-summary>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
