tg-6712 [FE] [Guardia - Historial de triage] Mostrar el nombre autopercibido si está activo el FF

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -141,7 +141,7 @@
 
 									<div id="right-side">
 										<span>
-											{{ triage.createdBy?.firstName }} {{ triage.createdBy?.lastName }}
+											{{getFullName(triage)}}
 										</span>
 										<span *ngIf="triage.doctorsOfficeDescription">
 											• {{ triage.doctorsOfficeDescription }}
