tg-6713 [FE] [Guardia - Ultimo triage] Mostrar el nombre autopercibido si está activo el FF

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -15,7 +15,7 @@
 			<div class="info" fxLayout="column" fxLayoutGap="6px" fxLayoutAlign="space-between">
 				<span>{{ 'guardia.episode.triage.ultimo.REALIZADO_POR' | translate }}</span>
 				<span *ngIf="triage.createdBy else noInfo" class="padding-to-align-chip">
-					{{ triage.createdBy.firstName }} {{ triage.createdBy.lastName }}
+					{{getFullName(triage)}}
 				</span>
 			</div>
 
