--- a/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/medical-coverage/medical-coverage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/medical-coverage/medical-coverage.component.html
@@ -14,7 +14,7 @@
 						<div fxLayout="column" fxLayoutAlign="space-between">
 							<span
 								class="medical-coverage-name">{{getFullHealthInsuranceText(patientMedicalCoverage.medicalCoverage)}}</span>
-							<span class="lowercase capitalize-first-letter">{{patientMedicalCoverage?.condition}}</span>
+							<span class="lowercase capitalize-first-letter">{{getMedicalCoveragePlanText(patientMedicalCoverage)}}</span>
 							<app-editable-field [fieldName]="'Nro de afiliado'"
 												[value]="patientMedicalCoverage.affiliateNumber"
 												(newValueEmitted)="patientMedicalCoverage.affiliateNumber = $event">
@@ -35,31 +35,42 @@
 				  (ngSubmit)="addHealthInsurance(formDirectiveHealthInsuranceForm)">
 				<div fxLayout="column" fxLayoutGap="10px">
 					<div fxLayout="row" fxLayoutGap="10px" fxLayout.lt-sm="column">
-				<mat-form-field appearance="outline">
-					<input type="text" placeholder="{{ 'Buscar obra social' | translate }}" aria-label="Number"
-						   formControlName="healthInsurance" matInput [matAutocomplete]="auto">
-					<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-						<mat-option *ngFor="let healthInsurance of healthInsuranceFilteredMasterData"
-									(onSelectionChange)="selectHealthInsurance($event, healthInsurance)"
-									[value]="getFullHealthInsuranceText(healthInsurance)">
-							<span class="mat-body">{{getFullHealthInsuranceText(healthInsurance)}}</span>
-						</mat-option>
-					</mat-autocomplete>
-					<mat-error translate="forms.REQUIRED"></mat-error>
-				</mat-form-field>
+						<mat-form-field appearance="outline">
+							<input type="text" placeholder="{{ 'Buscar obra social' | translate }}" aria-label="Number"
+								   formControlName="healthInsurance" matInput [matAutocomplete]="auto">
+							<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+								<mat-option *ngFor="let healthInsurance of healthInsuranceFilteredMasterData"
+											(onSelectionChange)="selectHealthInsurance($event, healthInsurance)"
+											[value]="getFullHealthInsuranceText(healthInsurance)">
+									<span class="mat-body">{{getFullHealthInsuranceText(healthInsurance)}}</span>
+								</mat-option>
+							</mat-autocomplete>
+							<mat-error translate="forms.REQUIRED"></mat-error>
+						</mat-form-field>
 
-				<mat-form-field appearance="outline">
-					<input id="healthInsuranceAffiliateNumber" name="healthInsuranceAffiliateNumber"
-						   formControlName="affiliateNumber" placeholder="{{'Nro de afiliado' | translate}}" matInput>
-				</mat-form-field>
+						<mat-form-field appearance="outline">
+							<mat-label [translate]="'medical-coverage.PLAN_LABEL'"></mat-label>
+							<mat-select
+								formControlName="plan">
+								<mat-option
+									id="healthInsurancePlan"
+									name="healthInsurancePlan"
+									*ngFor="let healthInsurancePlan of hiPlans" [value]="healthInsurancePlan.id">
+									{{healthInsurancePlan.plan}}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
 					</div>
-					<div fxLayout="row" fxLayoutGap="6px">
-						<mat-radio-group name="health-insurance-condition" id="health-insurance-condition" formControlName="condition" fxLayoutGap="20px">
-							<mat-radio-button id="voluntary" [value]="1">
-								<span translate="medical-coverage.VOLUNTARY"></span>
-							</mat-radio-button>
-							<mat-radio-button id="mandatory" [value]="2">
-								<span translate="medical-coverage.MANDATORY"></span>
+					<div fxLayout="column" fxLayoutGap="6px">
+						<mat-form-field appearance="outline">
+							<input id="healthInsuranceAffiliateNumber" name="healthInsuranceAffiliateNumber"
+								   formControlName="affiliateNumber" placeholder="{{'Nro de afiliado' | translate}}" matInput>
+						</mat-form-field>
+						<mat-radio-group fxLayout="row" fxLayoutGap="6px" name="health-insurance-condition"
+										 id="health-insurance-condition" formControlName="condition" fxLayoutGap="20px">
+							<mat-radio-button *ngFor="let condition of conditions"
+											  [value]="condition">
+								<span>{{condition.toLocaleLowerCase() | titlecase}}</span>
 							</mat-radio-button>
 						</mat-radio-group>
 					</div>
@@ -89,7 +100,7 @@
 							<span
 								class="medical-coverage-name">{{patientPrivateHealthInsurance.medicalCoverage.name}}</span>
 							<span
-								class="lowercase capitalize-first-letter">{{getPrivateHealthInsurancePlanText(patientPrivateHealthInsurance)}}</span>
+								class="lowercase capitalize-first-letter">{{getMedicalCoveragePlanText(patientPrivateHealthInsurance)}}</span>
 							<app-editable-field [fieldName]="'Nro de credencial'"
 												[value]="patientPrivateHealthInsurance.affiliateNumber"
 												(newValueEmitted)="patientPrivateHealthInsurance.affiliateNumber = $event">
@@ -135,8 +146,7 @@
 							<mat-option
 								id="plan"
 								name="plan"
-								*ngFor="let privateHealthInsurancePlan of plans"
-								[value]="privateHealthInsurancePlan.id">
+								*ngFor="let privateHealthInsurancePlan of phiPlans" [value]="privateHealthInsurancePlan.id">
 								{{privateHealthInsurancePlan.plan}}
 							</mat-option>
 						</mat-select>
@@ -159,11 +169,9 @@
 					<div fxLayout="row" fxLayoutGap="6px" fxLayoutAlign="start center">
 						<mat-radio-group name="private-healh-insurance-condition" id="private-healh-insurance-condition"
 										 formControlName="condition" fxLayoutGap="20px">
-							<mat-radio-button id="private-voluntary" [value]="1">
-								<span translate="medical-coverage.VOLUNTARY"></span>
-							</mat-radio-button>
-							<mat-radio-button id="private-mandatory" [value]="2">
-								<span translate="medical-coverage.MANDATORY"></span>
+							<mat-radio-button *ngFor="let condition of conditions"
+											  [value]="condition">
+								<span>{{condition.toLocaleLowerCase() | titlecase}}</span>
 							</mat-radio-button>
 						</mat-radio-group>
 					</div>
